--- a/src/app/ui/components/user/user.component.scss
+++ b/src/app/ui/components/user/user.component.scss
@@ -12,6 +12,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
+    z-index: 1;
 
     h2 {
       text-align: center;
@@ -20,7 +21,7 @@
       @include styles.font-title;
     }
   }
-  
+
   &-content-na {
     text-align: center;
   }
