--- a/src/app/ui/tabs/table-progress/table-progress.component.html
+++ b/src/app/ui/tabs/table-progress/table-progress.component.html
@@ -1,16 +1,27 @@
-<h3>Este es tu progreso: </h3>
-<br>
-<div class="container">
-
-    <table class="table-progress">
-      <tr>
-        <th *ngFor="let label of labels">{{ label }}</th>
-      </tr>
-      <tr style="align-content: center; justify-content: center">
-        <td *ngFor="let label of labels; let i = index">
-          {{ data[i] }}
-        </td>
-      </tr>
+<div class="table-progress">
+  <dukes-loading *ngIf="loading"></dukes-loading>
+  <div class="table-progress_content" *ngIf="!loading" id="pdfTable" #pdfTable>
+    <h3>Este es tu progreso:</h3>
+    <br />
+    <table id="excel-table">
+      <thead>
+        <tr>
+          <th *ngFor="let label of labels">{{ label }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td *ngFor="let label of labels; let i = index">
+            {{ data[i] }}
+          </td>
+        </tr>
+      </tbody>
     </table>
-
+    <button class="btn-general" (click)="downloadAsPDF()">
+      Exportar a PDF
+    </button>
+    <button class="btn-general" (click)="exportToExcel()">
+      Exportar a Excel
+    </button>
+  </div>
 </div>
